# ClothBase

./: .gitignore  Design2.txt  Dockerfile  README.md  clothbase.sql  docker-compose.yml  dockerfile  notes.txt
api_project/: Dockerfile  pyproject.toml  uninstall.txt
api_project/alembic/versions/: cc461f4f3814_first_revision.py
api_project/api/: main.py
api_project/api/models/: __init__.py  log.py
app/: Dockerfile  app.py  conn.py  display.py  main-bak.py  main.py  psycopg2.py  requirements.txt
app/ascii/: __init__.py  menu.py
app/asciiDisplay/: __init__.py  asc_menu.py  display.py  menu.py  option.py  path.py
app/display2/: menu.py  option.py  test.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1258355bce80_first_revision.py
backend/api/: config.py  database.py  main.py  secrets-model.json  secrets.json
backend/api/crud/: README.md  log.py
backend/api/models/: README.md  __init__.py  log.py  user.py  usertype.py
backend/api/routers/: user.py
backend/api/schemas/: user.py
database/: Dockerfile  clothbase.sql
forontend/: package.json
frontend/: index.html  vite.config.js
frontend/frontend/: vite.config.js
frontend/src/: App.jsx  MyComponent.jsx  PP.jsx  UserGreeting.jsx
frontend/src/ls1/: Footer.jsx  Header.jsx
frontend/src/ls2/: List.jsx  Student.jsx
frontend/src/ls2/Button/: Button.jsx
frontend/src/ls2/Card/: Card.jsx  Card.module.css
