[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["BrenoBDias <99230311+BrenoBDias@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.6"}
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
